--- a/lang/system/zh-s.xml
+++ b/lang/system/zh-s.xml
@@ -38,6 +38,7 @@
 
 	<about name="关于">
 		<vita3k>Vita3K：PS Vita/PS TV模拟器，是全球首个实用的PS Vita/PS TV模拟器。</vita3k>
+		<for_android>如果您没有从Vita3K的官方Discord下载此模拟器，是付费购买或含有广告，请立即卸载它。</for_android>
 		<about_vita3k>Vita3K是使用C++编写的实验性开源PlayStation Vita/PlayStation TV模拟器，适用于Windows、Linux、macOS以及Android操作系统。</about_vita3k>
 		<special_credit>特别鸣谢：Vita3K图标设计由：</special_credit>
 		<github_website>如果您有兴趣参与贡献，请浏览我们的：</github_website>
@@ -67,6 +68,7 @@
 		<license>授权</license>
 		<shaders_cache>着色器缓存</shaders_cache>
 		<shaders_log>着色器日志</shaders_log>
+		<create_shortcut>创建快捷方式</create_shortcut>
 		<manual>说明书</manual>
 		<update>升级</update>
 		<update_history>更新历史记录</update_history>
@@ -296,6 +298,7 @@
 		<red>红</red>
 		<green>绿</green>
 		<blue>蓝</blue>
+		<motion_sensors>使用内置设备传感器</motion_sensors>
 		<reset_controller_binding>重置控制器绑定</reset_controller_binding>
 	</controllers>
 
@@ -524,6 +527,18 @@
 3、如果您想要安装/运行Vitamin是不支持的。</load_app_failed>
 	</message>
 
+	<overlay name="虚拟按键">
+		<gamepad_overlay>手柄虚拟按键</gamepad_overlay>
+		<enable_gamepad_overlay>在游戏中显示手柄虚拟按键</enable_gamepad_overlay>
+		<hide_gamepad_overlay>隐藏手柄虚拟按键</hide_gamepad_overlay>
+		<modify_gamepad_overlay>修改手柄虚拟按键</modify_gamepad_overlay>
+		<overlay_scale>虚拟按键缩放</overlay_scale>
+		<overlay_opacity>虚拟按键不透明度</overlay_opacity>
+		<reset_gamepad>重置手柄布局</reset_gamepad>
+		<overlay_show_touch_switch>显示前/后触屏切换按键。</overlay_show_touch_switch>
+		<l2_r2_triggers>仅当启用PSTV模式时，才会显示L2/R2键。</l2_r2_triggers>
+	</overlay>
+
 	<performance_overlay>
 		<avg>平均</avg>
 		<min>最低</min>
@@ -616,6 +631,8 @@
 			<select_backend_renderer>选择您喜欢的后端渲染器。</select_backend_renderer>
 			<gpu>GPU（重启后应用）</gpu>
 			<select_gpu>选择在Vita3K应运行的GPU。</select_gpu>
+			<add_custom_driver>添加自定义驱动</add_custom_driver>
+			<remove_custom_driver>移除自定义驱动</remove_custom_driver>
 			<standard>标准</standard>
 			<high>高</high>
 			<renderer_accuracy>渲染精度</renderer_accuracy>
@@ -649,6 +666,16 @@
 			<shader_cache>使用着色器缓存</shader_cache>
 			<shader_cache_description>勾选此项以启用着色器缓存以在游戏启动时对其进行预编译。
 取消勾选则禁用该功能。</shader_cache_description>
+			<disabled>禁用</disabled>
+			<double_buffer>双重缓冲</double_buffer>
+			<external_host>外部主机</external_host>
+			<page_table>页表</page_table>
+			<native_buffer>原生缓冲</native_buffer>
+			<mapping_method>内存映射方式</mapping_method>
+			<mapping_method_description>内存映射提高了性能，减少了内存使用量，并修复了许多图形问题。
+但是它在某些GPU上可能不稳定。</mapping_method_description>
+			<turbo_mode>启用睿频模式</turbo_mode>
+			<turbo_mode_description>提供了一种方法来强制GPU运行在最大合理的频率（温控仍然适用）。</turbo_mode_description>
 			<spirv_shader>使用Spir-V着色器（已弃用）</spirv_shader>
 			<spirv_shader_description>将生成的Spir-V着色器直接传递给驱动程序。
 请注意，一些有益的扩展功能将被禁用，
@@ -731,6 +758,7 @@
 			<reset_emu_path>重置模拟器路径</reset_emu_path>
 			<reset_emu_path_description>重置Vita3K模拟器为默认路径。
 您需要手动将旧文件夹移动到新位置。</reset_emu_path_description>
+			<storage_folder_permissions>使用不同路径需要额外权限</storage_folder_permissions>
 			<custom_config_settings>自定义配置设置</custom_config_settings>
 			<clear_custom_config>清除自定义配置</clear_custom_config>
 		</emulator>
@@ -892,6 +920,7 @@
 	</vita3k_update>
 
 	<welcome name="欢迎使用Vita3K">
+		<for_android>此模拟器是免费的，并在Vita3K的官方Discord上发布。如果您没有从Vita3K的Discord下载此应用程序，是付费购买或含有广告，请考虑立即卸载它以确保您自己的安全。</for_android>
 		<vita3k>Vita3K PlayStation Vita模拟器</vita3k>
 		<about_vita3k>Vita3K是使用C++编写的开源PlayStation Vita模拟器，适用于Windows、Linux、macOS以及Android。</about_vita3k>
 		<development_stage>目前模拟器仍处于开发阶段，因此非常感谢任何反馈和测试。</development_stage>
