lang: Update id (Indonesia) and ms (Malaysia) translation.
Co-authored-by: Kitakatarashima <secretstarsgoldenid@gmail.com>

--- a/lang/user/id.xml
+++ b/lang/user/id.xml
@@ -38,6 +38,7 @@
 
 	<about name="Tentang">
 		<vita3k>Vita3K: Emulator PS Vita/PS TV. Emulator PS Vita/PS TV fungsional pertama di dunia.</vita3k>
+		<for_android>Jika Anda tidak mengunduh emulator ini dari Vita3K's official discord, berbayar atau berisi iklan, langsung hapus uninstalannya.</for_android>
 		<about_vita3k>Vita3K adalah emulator PlayStation Vita/PlayStation TV sumber terbuka eksperimental yang ditulis dalam C++ untuk sistem operasi Windows, Linux, macOS dan Android.</about_vita3k>
 		<special_credit>Special credit: vita3k icon dirancang oleh:</special_credit>
 		<github_website>Jika Kamu tertarik untuk berkontribusi, lihat kami di GitHub:</github_website>
@@ -64,6 +65,7 @@
 		<license>lisensi</license>
 		<shaders_cache>Cache Shader</shaders_cache>
 		<shaders_log>Catatan Shader</shaders_log>
+		<create_shortcut>Buat Pintasan</create_shortcut>
 		<update_history>History Perbarui</update_history>
 		<history_version>Versi {}</history_version>
 		<information>Informasi</information>
@@ -282,6 +284,7 @@ Kode kesalahan: {}</an_error_occurred>
 		<num>Bil</num>
 		<not_connected>Gak ada kontroler kompatibel yang tersambung.
 Sambungkan Kontroleryang kompatibel dengan SDL2.</not_connected>
+		<motion_sensors>Gunakan builtin device motion sensor</motion_sensors>
 	</controllers>
 
 	<controls name="kontrol">
@@ -463,6 +466,17 @@ Asia. (Umumnya Direkomendasikan)</firmware_font_package_note>
 		</help>
 	</live_area>
 
+	<overlay name="Overlay">
+		<enable_gamepad_overlay>Tampilkan Overlay gamepad digame</enable_gamepad_overlay>
+		<hide_gamepad_overlay>Sembunyikan Overlay Gamepad</hide_gamepad_overlay>
+		<modify_gamepad_overlay>Modif Overlay Gamepad</modify_gamepad_overlay>
+		<overlay_scale>Skala Overlay</overlay_scale>
+		<overlay_opacity>Tingkatan Kegelapan</overlay_opacity>
+		<reset_gamepad>Reset Ulang Gamepad</reset_gamepad>
+		<overlay_show_touch_switch>Tampilkan tombol sakelar layar sentuh depan/belakang</overlay_show_touch_switch>
+		<l2_r2_triggers>Trigger L2/R2 hanya akan ditampilkan jika mode PSTV diaktifkan.</l2_r2_triggers>
+	</overlay>
+
 	<settings name="Pengaturan">
 		<theme_background name="Tema & Latar Belakang">
 			<default>Bawaan</default>
@@ -547,6 +561,8 @@ Silakan download dan install firmware PS Vita terakhir.</no_modules>
 			<select_backend_renderer>Pilih perender backend pilihan kamu.</select_backend_renderer>
 			<gpu>GPU (Harus ulang lagi aplikasinya)</gpu>
 			<select_gpu>Pilih GPU Vita3K yang harus dijalankan.</select_gpu>
+			<add_custom_driver>Pasang custom driver</add_custom_driver>
+			<remove_custom_driver>Hapus custom driver</remove_custom_driver>
 			<renderer_accuracy>Perender Akurasi</renderer_accuracy>
 			<v_sync_description>Menonaktifkan V-Sync dapat memperbaiki masalah kecepatan di beberapa game.
 Disarankan untuk tetap mengaktifkannya untuk menghindari robekan visual.</v_sync_description>
@@ -571,14 +587,17 @@ Ini tidak memiliki kelemahan tetapi dapat mempengaruhi pada Performa.</anisotrop
 			<shader_cache>Pake Shader Cache</shader_cache>
 			<shader_cache_description>Centang kotak untuk mengaktifkan cache shader untuk melakukan pra-kompilasi saat startup game.
 Hapus centang untuk menonaktifkan fitur ini.</shader_cache_description>
+			<disabled>Dinonaktifkan</disabled>
+			<double_buffer>Ganda buffer</double_buffer>
+			<page_table>Tabel halaman</page_table>
+			<mapping_method>Pemetaan memory</mapping_method>
+			<mapping_method_description>Pemetaan memory itu bisa naikkan performanya. 
+kurangi pemakaian memory dan kebanyakan fix di bug grafis nya 
+selain itu banyak perangkat gak sama stabilnya di bahkan sesama cpu.</mapping_method_description>
 			<spirv_shader>Gunakan Shader Spir-V (tidak digunakan lagi)</spirv_shader>
 			<spirv_shader_description>Berikan shader Spir-V yang dihasilkan langsung ke pengemudi.
 Perhatikan bahwa beberapa ekstensi bermanfaat akan dinonaktifkan,
 dan tidak semua GPU kompatibel dengan ini.</spirv_shader_description>
-      <mapping_method>Pemetaan memory</mapping_method>
-      <mapping_method_description>Pemetaan memory itu bisa naikkan performanya. 
-kurangi pemakaian memory dan kebanyakan fix di bug grafis nya 
-selain itu banyak perangkat gak sama stabilnya di bahkan sesama cpu.</mapping_method_description>
 			<clean_shaders>Bersihkan Shader Cache dan Log</clean_shaders>
 		</gpu>
 		<audio name="Audio">
@@ -635,6 +654,7 @@ Anda perlu memindahkan folder lama ke lokasi baru secara manual.</change_emu_pat
 			<reset_emu_path>Reset Jalur Emulator</reset_emu_path>
 			<reset_emu_path_description>Reset jalur emulator Vita3K ke default.
 Kamu perlu memindahkan folder lama ke lokasi baru secara manual.</reset_emu_path_description>
+			<storage_folder_permissions>Menggunakan Letak yang berbeda memerlukan izin tambahan</storage_folder_permissions>
 			<custom_config_settings>Pengaturan Konfigurasi Kustom</custom_config_settings>
 			<clear_custom_config>Bersihkan Konfigurasi Kustom</clear_custom_config>
 		</emulator>
@@ -781,6 +801,7 @@ Setelah pengunduhan selesai, Vita3K akan restart secara otomatis dan kemudian me
 	</vita3k_update>
 
 	<welcome name="Selamat datang di Vita3K">
+		<for_android>Emulator ini gratis dan didistribusikan pada Vita3K's official discord. Jika Kamu tidak mengunduh aplikasi ini dari Vita3K's official discord, berbayar atau memiliki iklan, pertimbangkan untuk segera uninstall pemasangannya demi keselamatan Kamu sendiri.</for_android>
 		<vita3k>Emulator Vita3K PlayStation Vita</vita3k>
 		<about_vita3k>Vita3K adalah emulator PlayStation Vita sumber terbuka yang ditulis dalam C++ untuk Windows, Linux, macOS dan Android.</about_vita3k>
 		<development_stage>Emulator masih dalam tahap awal sehingga umpan balik dan pengujian apa pun sangat dihargai.</development_stage>
